--- a/portfolio-website/src/index.css
+++ b/portfolio-website/src/index.css
@@ -1,9 +1,21 @@
 :root {
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+
   font-family: "STIX Two Text", serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  word-break: break-all;
+
+  background-color: var(--primary-bg-color);
+  color: var(--text-color);
 
   /* color palette */
   --primary-bg-color: #2A2137;
@@ -19,26 +31,20 @@
 }
 
 body {
-  width: 100%;
-  background-color: var(--primary-bg-color);
-  color: var(--text-color);
+  margin: 0;
 }
 
 a {
+  color: var(--text-color);
   font-weight: 500;
   text-decoration: inherit;
 }
 
 a:hover {
+  cursor: pointer;
   text-decoration: underline;
   text-decoration-color: var(--secondary-color);
   text-decoration-thickness: 700;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  min-height: 100vh;
 }
 
 h1, h2, h3, a {
@@ -57,4 +63,14 @@ h2{
 
 section, footer {
   margin-top: var(--gap-default);
+}
+
+img {
+  max-width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  font-family: "REM", sans-serif;
 }
